gitops/infrastructure/argocd/argocd-inline-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: argocd-backend-policy
  namespace: argocd
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: argocd-route
  upstreamTls:
    settings:
      tlsContext:
        commonTlsContext:
          validationContext:
            trustedCa:
              inline: "disabled" # Desactiva la validación estricta de CA (ideal para el cer
